# shameless-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README  \  build.rs  docker-compose.yml  fly.toml  grpc.Dockerfile  log.ndjson  log_cache.py  model.py  requirements.txt  server.py  store.py
db/: 1-add-tag.sql  2-make-tags-not-nullable.sql  init.sql
logs/carl/: 0_90_5_b71c9075-2b73-456f-a52e-5f1faf27046a
proto/: logs.proto  shameless.proto
scripts/: generate-jwt.sh
src/: grpc_server.rs  main.rs  rest_server.rs
