[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
futures = "0.3.30"
serde = "1.0.209"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio", "time", "tls-native-tls"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
