[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
env_logger = "0.11.5"
futures = "0.3.30"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.22"
serde = "1.0.209"
sha2 = "0.10.8"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio", "time", "tls-native-tls"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
